manifests/web-ui-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: real-estate-hub
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: real-estate-hub
  template:
    metadata:
      labels:
        app: real-estate-hub
    spec:
      containers:
        - image: docker.io/bigsidhu/real-estate-hub:30e94b34bca9ae84caea83a107428ad194a65f9d
          name: real-estate-hub
          imagePullPolicy: Always
          command: ["streamlit", "run", "app/main.py"]
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8501
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 8501
              name: 8501tcpport
      restartPolicy: Always
      dnsPolicy: Default
