manifests/web-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: real-estate-hub
spec:
  type: ClusterIP
  ports:
    - port: 8501
      targetPort: 8501
      name: tcpport5601
  selector:
    app: real-estate-hub
